@@ -15,24 +15,152 @@ class Timetable extends CI_Model
 	{
 		parent::__construct();
 		$this->xml = simplexml_load_file(DATAPATH . 'master' . XMLSUFFIX, "SimpleXMLElement", LIBXML_NOENT);
+		$record = array();
 
 		//build a full list of days
-		foreach ($this->xml->days->day as $day)
+		foreach ($this->xml->days as $days)
 		{
-			$this->days[] = new Booking($day);
+			foreach ($days->day as $day)
+			{
+				//a day can have more than one booking
+				foreach ($day->booking as $booking)
+				{
+					$record['weekday'] = $day['weekday'];
+
+					$timeslot = $booking[0]->timeslot;
+					$record['start'] = $timeslot['start'];
+					$record['end'] = $timeslot['end'];
+
+					$courseType = $booking[0]->courseType;
+					$record['courseType'] = $courseType;
+
+					$courseCode = $booking[0]->courseCode;
+					$record['courseCode'] = $courseCode;
+
+					$room = $booking[0]->room;
+					$record['room'] = $room;
+
+					$instructor = $booking[0]->instructor;
+					$record['instructor'] = $instructor;
+
+					$this->days[] = new Booking($record);
+				}
+			}
 		}
 
 		//build a full list of timeslots
-		foreach ($this->xml->timeslots->timeslot as $time)
+		foreach ($this->xml->timeslots as $timeslots)
 		{
-			$this->timeslots[] = new Booking($time);
+			foreach ($timeslots->timeslot as $time)
+			{
+				//a timeslot can have more than one booking
+				foreach ($time->booking as $booking)
+				{
+					$time = $booking[0]->timeslot;
+					$record['start'] = $timeslot['start'];
+					$record['end'] = $timeslot['end'];
+
+					$day = $booking[0]->day;
+					$record['weekday'] = $day['weekday'];
+
+					$courseCode = $booking[0]->courseCode;
+					$record['courseCode'] = $courseCode;
+
+					$courseType = $booking[0]->courseType;
+					$record['courseType'] = $courseType;
+
+					$room = $booking[0]->room;
+					$record['room'] = $room;
+
+					$instructor = $booking[0]->instructor;
+					$record['instructor'] = $instructor;
+
+					$this->timeslots[] = new Booking($record);
+				}
+			}
 		}
 
 		//build a full list of courses
-		foreach ($this->xml->courses->course as $course)
+		foreach ($this->xml->courses as $courses)
 		{
-			$this->courses[] = new Booking($course);
+			foreach ($courses->course as $course)
+			{
+				//a course can have more than one booking
+				foreach ($course->booking as $booking)
+				{
+					$record['courseCode'] = $course['courseCode'];
+
+					$day = $booking[0]->day;
+					$record['weekday'] = $day['weekday'];
+
+					$timeslot = $booking[0]->timeslot;
+					$record['start'] = $timeslot['start'];
+					$record['end'] = $timeslot['end'];
+
+					$courseType = $booking[0]->courseType;
+					$record['courseType'] = $courseType;
+
+					$room = $booking[0]->room;
+					$record['room'] = $room;
+
+					$instructor = $booking[0]->instructor;
+					$record['instructor'] = $instructor;
+
+					$this->courses[] = new Booking($record);
+				}
+			}
 		}
+
+		/*
+		 * *******************************************
+		 * Debugging Mode
+		 * ******************************************** 
+		 */
+		print_r($this->timeslots);
+		die();
+	}
+
+	/*
+	 * ************************************************
+	 * Search Methods by each Facet
+	 * ************************************************
+	 */
+	function searchTimetableByDay($day,$slot)
+	{
+		
+	}
+
+	function searchTimetableByTimeslot($day,$slot)
+	{
+		
+	}
+
+	function searchTimetableByCourse($day,$slot)
+	{
+		
+	}
+
+	/*
+	 * ************************************************
+	 * Accessors
+	 * ************************************************
+	 */
+//retrieve a list of days as an assoc. array
+	function getDays()
+	{
+		return isset($this->days) ? $this->days : null;
+	}
+
+//retrieve a list of timeslots
+	function getTimeslots()
+	{
+		return isset($this->timeslots) ? $this->timeslots : null;
+	}
+
+//retrieve a list of courses
+	function getCourses()
+	{
+		return isset($this->courses) ? $this->courses : null;
 	}
 
 }
@@ -41,47 +169,23 @@ Class Booking extends CI_Model
 {
 
 	public $weekday = "";
-	public $timeslot = "";
+	public $courseType = "";
 	public $courseCode = "";
-	public $periodStart = "";
-	public $periodEnd = "";
+	public $start = "";
+	public $end = "";
 	public $room = "";
 	public $instructor = "";
 
-	// Constructor
+// Constructor
 	public function __construct($detail)
 	{
 		parent::__construct();
-		$this->weekday = (string) $detail['weekday'];
-		$this->timeslot = (string) $detail['timeslot'];
+		$this->weekday = (String) $detail['weekday'];
+		$this->courseType = (string) $detail['courseType'];
 		$this->courseCode = (string) $detail['courseCode'];
-		$this->periodStart = (string) $detail['periodStart'];
-		$this->periodEnd = (string) $detail['periodEnd'];
+		$this->start = (string) $detail['start'];
+		$this->end = (string) $detail['end'];
 		$this->room = (string) $detail['room'];
 		$this->instructor = (string) $detail['instructor'];
 	}
-
 }
-//retrieve a list of days as an assoc. array
-	function getDays(){
-		return $this->days;
-	}
-//retrieve a list of courses
-	function getCourses(){
-		return $this->courses; 
-	}
-//retrieve a list of timeslots
-	function getTimeslots(){
-		return $this->timeslots; 
-	}	
-//function searchTimetableByDay(){
-//	
-//}
-//
-//function searchTimetableByTimeslot(){
-//	
-//}
-//
-//function searchTimetableByCourse(){
-//	
-//}
